# task-manager

./: .gitignore  README.md  docker-compose.yml  openapi.json  openapi.py  pyproject.toml
api/: Dockerfile  main.py
api/adapters/rest/: dtos.py  event.py  project.py  server.py  task.py
api/adapters/sqlite/: db.py  project.py  task.py
api/core/domain/: error.py  event.py  task.py
api/core/port/: event.py  project.py  task.py
api/core/service/: project.py  task.py
app/: package-lock.json  package.json  tsconfig.json
app/src/app/: page.tsx
app/src/components/: ProjectList.tsx  TaskList.tsx
app/src/config/: api-client.ts
app/src/lib/: sdk.gen.ts  types.gen.ts
