[project]
name = "task-manager"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "python-multipart>=0.0.6",
    "python-dateutil>=2.8.2",
]

[project.scripts]
dev = "api.main:main"
openapi = "openapi:generate_openapi_spec"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]
